# aetheris-engine

./: .codespellrc  .gitignore  Cargo.toml  PHASE-1-QUALITY-GATE.json  README.md  deny.toml  justfile  release-plz.toml
.cargo/: audit.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  minimal-features.yml  release-plz.yml
benchmarks/: README.md
benchmarks/2026-04-23_1038/: REPORT.md
benchmarks/2026-04-23_1038/criterion/ecs_extract_dirty_7_of_1000/base/: sample.json
benchmarks/2026-04-23_1038/criterion/ecs_extract_dirty_7_of_1000/change/: estimates.json
benchmarks/2026-04-23_1038/criterion/ecs_extract_dirty_7_of_1000/new/: benchmark.json  estimates.json  tukey.json
benchmarks/2026-04-23_1038/criterion/ecs_extract_dirty_7_of_1000/report/: index.html
benchmarks/2026-04-23_1038/criterion/encode_rmp_serde_transform/base/: sample.json
benchmarks/2026-04-23_1038/criterion/encode_rmp_serde_transform/change/: estimates.json
benchmarks/2026-04-23_1038/criterion/encode_rmp_serde_transform/new/: benchmark.json  estimates.json  tukey.json
benchmarks/2026-04-23_1038/criterion/encode_rmp_serde_transform/report/: index.html
benchmarks/2026-04-23_1038/criterion/report/: index.html
benchmarks/2026-04-23_1038/criterion/tick_scheduler_step_noop/base/: estimates.json  sample.json  tukey.json
benchmarks/2026-04-23_1038/criterion/tick_scheduler_step_noop/change/: estimates.json
benchmarks/2026-04-23_1038/criterion/tick_scheduler_step_noop/new/: benchmark.json
benchmarks/2026-04-23_1038/criterion/tick_scheduler_step_noop/report/: index.html
benchmarks/_template/: REPORT.md
crates/aetheris-ecs-bevy/: CHANGELOG.md  Cargo.toml  README.md
crates/aetheris-ecs-bevy/benches/: ecs_pipeline.rs
crates/aetheris-ecs-bevy/src/: adapter.rs  combat.rs  components.rs  deterministic_rng.rs  extraction.rs  interaction.rs  lib.rs  mining.rs  physics_consts.rs  registry.rs
crates/aetheris-ecs-bevy/tests/: combat_tests.rs
crates/aetheris-ecs-custom/: CHANGELOG.md  Cargo.toml  README.md
crates/aetheris-ecs-custom/src/: lib.rs
crates/aetheris-server/: CHANGELOG.md  Cargo.toml  README.md
crates/aetheris-server/benches/: tick_pipeline.rs
crates/aetheris-server/src/: config.rs  lib.rs  main.rs  multi_transport.rs  telemetry.rs  tick.rs
crates/aetheris-server/src/auth/: email.rs  google.rs  mod.rs  rate_limit.rs
crates/aetheris-server/src/matchmaking/: mod.rs
crates/aetheris-server/tests/: determinism.rs  security_integration.rs  server_integration.rs
crates/aetheris-stress/: CHANGELOG.md  Cargo.toml  README.md
crates/aetheris-stress/src/: main.rs
crates/aetheris-transport-quinn/: CHANGELOG.md  Cargo.toml  README.md
crates/aetheris-transport-quinn/src/: lib.rs
crates/aetheris-transport-renet/: CHANGELOG.md  Cargo.toml  README.md
crates/aetheris-transport-renet/src/: lib.rs
crates/aetheris-transport-webtransport/: CHANGELOG.md  Cargo.toml  README.md
crates/aetheris-transport-webtransport/src/: lib.rs
docs/: CONFIGURATION_DESIGN.md  DEPLOYMENT_DESIGN.md  DEPLOYMENT_DESIGN_PRO.md  DEVELOPER_GUIDE.md  ENGINE_DESIGN.md  ERROR_HANDLING_DESIGN.md  INTEGRATION_DESIGN.md  INTEREST_MANAGEMENT_DESIGN.md  MIGRATION_DESIGN.md  OBSERVABILITY_DESIGN.md  OBSERVABILITY_DESIGN_PRO.md  PERSISTENCE_DESIGN.md  PERSISTENCE_DESIGN_PRO.md  PRIORITY_CHANNELS_DESIGN.md  REPOSITORY_ARCHITECTURE_DESIGN.md  ROOM_AND_INSTANCE_DESIGN.md  SECURITY_DESIGN.md  SECURITY_DESIGN_PRO.md  SPATIAL_PARTITIONING_DESIGN.md  TESTING_DESIGN.md
scripts/: check_branding.py  dev_toggle.py  smoke_test.js  validate_quality_gate.py
