[package]
name = "aetheris-stress"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Stress test bot for the Aetheris multiplayer platform"
repository.workspace = true
readme.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true, features = ["transport"] }
prost = { workspace = true }
aetheris-protocol = { workspace = true, features = ["grpc"] }
aetheris-encoder-serde = { workspace = true }
renet = { workspace = true }
renet_netcode = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
clap = { version = "4.5.31", features = ["derive"] }
async-trait = { workspace = true }
rmp-serde = { workspace = true }
anyhow = "1.0.95"
serde = { workspace = true }
futures = { workspace = true }

[[bin]]
name = "aetheris-bot"
path = "src/main.rs"
