[package]
name = "aetheris-transport-webtransport"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Browser-native WebTransport layer for the Aetheris Engine (QUIC/HTTP3)"
repository.workspace = true
readme.workspace = true

[dependencies]
aetheris-protocol = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wtransport = { workspace = true }
rcgen = { workspace = true }
tokio = { workspace = true }
ring = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
# time is needed to set cert validity to <= 14 days (Chrome serverCertificateHashes constraint)
time = { workspace = true }
